--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: BY Blog
-SEOTitle: Echo | BY Blog
+SEOTitle: Echo Blog | BY Blog
 header-img: img/post-bg-desk.jpg
 email: xiongli911@gmail.com
 description: "Every failure is leading towards success."
