--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,9 @@ kramdown:
 
 
 # 评论系统
-Disqus（https://disqus.com/）
+# Disqus（https://disqus.com/）
+# disqus_username: qiubaiying
+Disqus(https://disqus.com/)
 disqus_username: EchoSmiled
 
 # Gitalk
