--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ kramdown:
 # 评论系统
 # Disqus(https://disqus.com/)
 # disqus_username: qiubaiying
-# disqus_username: EchoSmiled
+disqus_username: EchoSmiled
 
 # Gitalk
 gitalk:
