--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog 
+title: Echo Blog 
 SEOTitle: Echo Blog | BY Blog
 header-img: img/post-bg-desk.jpg
 email: xiongli911@gmail.com
