--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Echo Blog 
-SEOTitle: Echo Blog | BY Blog
+SEOTitle: Echo Blog 
 header-img: img/post-bg-desk.jpg
 email: xiongli911@gmail.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, Echo, Echo, .Net, .NetCore, C#"
+keyword: "熊丽, Blog, Echo, .Net, .NetCore, C#"
 url: "http://echosmile.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/EchoSmile/echosmile.github.io.git" # you code repository
