--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "homepage": "https://echosmile.github.io/",
     "repository": {
         "type": "git",
-        "url": "https://github.com/EchoSmile/echosmile.github.io.git"
+        "url": "https://github.com/pikaq91/echosmile.github.io.git"
     },
     "bugs": "https://github.com/qiubaiying/qiubaiying.github.io/issues",
     "devDependencies": {
